--- a/dola.html
+++ b/dola.html
@@ -434,6 +434,6 @@
         <i class="fas fa-arrow-up"></i>
     </a>
 
-    <script src="js/main.js"></script>
+    <script src="js/dolam.js"></script>
 </body>
 </html>
